--- a/app/mvc/view/assets/css/home.css
+++ b/app/mvc/view/assets/css/home.css
@@ -31,7 +31,7 @@ body {
 }
 
 body{
-  background-image: url("images/melhor-brinquedo-para-cachorro-hiperativo-2-.png");
+  background-image: url("../../static/imagens/melhor-brinquedo-para-cachorro-hiperativo-2-.png");
   background-size: 100% 100%;
   display: -ms-flexbox;
   display: -webkit-box;
